# jetspotter

./: .gitignore  Cargo.toml
src/: aircraft.rs  jetphotos.rs  jetspotter.rs  main.rs
src/jetphotos/: aircraft_photo.rs  mod.rs
src/views/: fetch_overlay.rs  fetch_panel.rs  game.rs  mod.rs  play.rs  play_panel.rs  statistics.rs  statistics_panel.rs  top_panel.rs
