[package]
name = "airplane-id-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
eframe = "0.20.1"
ehttp = "0.2.0"
poll-promise = "0.2.0"
serde = { version = "1.0.152", features = ["derive"] }
