[package]
name = "airplane-id-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
eframe = "0.20.1"
poll-promise = "0.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
reqwest = { version = "0.11.3", features = ["blocking"] }
scraper = "0.14.0"
strum = "0.24"
strum_macros = "0.24"