[package]
name = "airplane-id-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
eframe = "0.20.1"
egui_extras = {version = "0.20.0", features = ["image"]}
poll-promise = "0.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
reqwest = { version = "0.11.3", features = ["blocking"] }
ehttp = "0.2.0"
scraper = "0.14.0"
strum = "0.24"
strum_macros = "0.24"
image = { version = "0.24.5", features = ["jpeg"] }